tests filter by type
