# internal/server/entry/dto/request/sync/sync_request.go
@@ -1,8 +1,17 @@
 package sync
 
+import (
+	"encoding/json"
+	"fmt"
+
+	"github.com/anoriar/gophkeeper/internal/server/entry/enum"
+	errors2 "github.com/anoriar/gophkeeper/internal/server/entry/errors"
+)
+
 type SyncRequest struct {
-	Items  []SyncRequestItem `json:"items"`
-	UserID string
+	Items    []SyncRequestItem `json:"items"`
+	SyncType enum.EntryType
+	UserID   string
 }
 
 func (c *SyncRequest) Contains(id string) bool {
@@ -20,5 +29,27 @@ func (c *SyncRequest) FindById(id string) *SyncRequestItem {
 			return &entry
 		}
 	}
+	return nil
+}
+
+func (c *SyncRequest) UnmarshalJSON(data []byte) error {
+	type Alias SyncRequest
+	alias := &struct {
+		*Alias
+		SyncType string `json:"syncType"`
+	}{
+		Alias: (*Alias)(c),
+	}
+
+	if err := json.Unmarshal(data, &alias); err != nil {
+		return err
+	}
+
+	if !enum.IsEntryType(alias.SyncType) {
+		return fmt.Errorf("%w: invalid SyncType value: %s", errors2.ErrSyncRequestNotValid, alias.SyncType)
+	}
+
+	c.SyncType = (enum.EntryType)(alias.SyncType)
+
 	return nil
 }
