# internal/server/entry/dto/response/sync/sync_response.go
@@ -1,9 +1,12 @@
 package sync
 
+import "github.com/anoriar/gophkeeper/internal/server/entry/enum"
+
 type SyncResponse struct {
-	Items []SyncResponseItem `json:"items"`
+	Items    []SyncResponseItem `json:"items"`
+	SyncType enum.EntryType     `json:"syncType"`
 }
 
-func NewSyncResponse(items []SyncResponseItem) *SyncResponse {
-	return &SyncResponse{Items: items}
+func NewSyncResponse(items []SyncResponseItem, syncType enum.EntryType) *SyncResponse {
+	return &SyncResponse{Items: items, SyncType: syncType}
 }
