# internal/server/entry/dto/response/sync/sync_response_item.go
@@ -3,18 +3,15 @@ package sync
 import (
 	"encoding/json"
 	"time"
-
-	"github.com/anoriar/gophkeeper/internal/server/entry/enum"
 )
 
 type SyncResponseItem struct {
 	OriginalId string          `json:"originalId"`
-	EntryType  enum.EntryType  `json:"type"`
 	UpdatedAt  time.Time       `json:"updatedAt"`
 	Data       string          `json:"data"`
 	Meta       json.RawMessage `json:"meta"`
 }
 
-func NewSyncResponseItem(originalId string, entryType enum.EntryType, updatedAt time.Time, data string, meta json.RawMessage) *SyncResponseItem {
-	return &SyncResponseItem{OriginalId: originalId, EntryType: entryType, UpdatedAt: updatedAt, Data: data, Meta: meta}
+func NewSyncResponseItem(originalId string, updatedAt time.Time, data string, meta json.RawMessage) *SyncResponseItem {
+	return &SyncResponseItem{OriginalId: originalId, UpdatedAt: updatedAt, Data: data, Meta: meta}
 }
