# internal/server/entry/factory/entry_factory.go
@@ -3,6 +3,8 @@ package factory
 import (
 	"encoding/base64"
 
+	"github.com/anoriar/gophkeeper/internal/server/entry/enum"
+
 	uuid2 "github.com/anoriar/gophkeeper/internal/server/shared/services/uuid"
 
 	"github.com/anoriar/gophkeeper/internal/server/entry/dto/request/sync"
@@ -17,7 +19,7 @@ func NewEntryFactory(uuidGen uuid2.UUIDGeneratorInterface) *EntryFactory {
 	return &EntryFactory{uuidGen: uuidGen}
 }
 
-func (f *EntryFactory) CreateNewEntryFromRequestItem(requestItem sync.SyncRequestItem, userID string) (entity.Entry, error) {
+func (f *EntryFactory) CreateNewEntryFromRequestItem(requestItem sync.SyncRequestItem, userID string, syncType enum.EntryType) (entity.Entry, error) {
 	data, err := base64.StdEncoding.DecodeString(requestItem.Data)
 	if err != nil {
 		return entity.Entry{}, err
@@ -26,14 +28,14 @@ func (f *EntryFactory) CreateNewEntryFromRequestItem(requestItem sync.SyncReques
 		f.uuidGen.NewString(),
 		requestItem.OriginalId,
 		userID,
-		requestItem.EntryType,
+		syncType,
 		requestItem.UpdatedAt,
 		data,
 		requestItem.Meta,
 	), nil
 }
 
-func (f *EntryFactory) CreateEntryFromRequestItem(id string, requestItem sync.SyncRequestItem, userID string) (entity.Entry, error) {
+func (f *EntryFactory) CreateEntryFromRequestItem(id string, requestItem sync.SyncRequestItem, userID string, syncType enum.EntryType) (entity.Entry, error) {
 	data, err := base64.StdEncoding.DecodeString(requestItem.Data)
 	if err != nil {
 		return entity.Entry{}, err
@@ -42,7 +44,7 @@ func (f *EntryFactory) CreateEntryFromRequestItem(id string, requestItem sync.Sy
 		id,
 		requestItem.OriginalId,
 		userID,
-		requestItem.EntryType,
+		syncType,
 		requestItem.UpdatedAt,
 		data,
 		requestItem.Meta,
