# internal/server/entry/factory/response/sync/sync_response_factory.go
@@ -4,6 +4,8 @@ import (
 	"encoding/base64"
 	"fmt"
 
+	"github.com/anoriar/gophkeeper/internal/server/entry/enum"
+
 	"github.com/anoriar/gophkeeper/internal/server/entry/dto/collection"
 	"github.com/anoriar/gophkeeper/internal/server/entry/dto/response/sync"
 	"github.com/anoriar/gophkeeper/internal/server/entry/entity"
@@ -17,7 +19,7 @@ func NewSyncResponseFactory() *SyncResponseFactory {
 	return &SyncResponseFactory{}
 }
 
-func (f *SyncResponseFactory) CreateSyncResponse(entryCollection collection.EntryCollection) (sync.SyncResponse, error) {
+func (f *SyncResponseFactory) CreateSyncResponse(entryCollection collection.EntryCollection, syncType enum.EntryType) (sync.SyncResponse, error) {
 	syncResponseItems := make([]sync.SyncResponseItem, 0, len(entryCollection.Entries))
 	for _, entry := range entryCollection.Entries {
 		responseItem, err := f.CreateSyncResponseItem(entry)
@@ -26,9 +28,9 @@ func (f *SyncResponseFactory) CreateSyncResponse(entryCollection collection.Entr
 		}
 		syncResponseItems = append(syncResponseItems, responseItem)
 	}
-	return *sync.NewSyncResponse(syncResponseItems), nil
+	return *sync.NewSyncResponse(syncResponseItems, syncType), nil
 }
 
 func (f *SyncResponseFactory) CreateSyncResponseItem(entry entity.Entry) (sync.SyncResponseItem, error) {
-	return *sync.NewSyncResponseItem(entry.OriginalId, entry.EntryType, entry.UpdatedAt, base64.StdEncoding.EncodeToString(entry.Data), entry.Meta), nil
+	return *sync.NewSyncResponseItem(entry.OriginalId, entry.UpdatedAt, base64.StdEncoding.EncodeToString(entry.Data), entry.Meta), nil
 }
